# kalman_filter_ROS

./: README.md  kalman_filter_launch.py  plot_kalman_filter.py  synthetic_data_publisher.py
bag_files/highway_drive_bag/: highway_drive_bag_0.db3  metadata.yaml
install/: local_setup.sh  setup.sh
install/kalman_filter/share/kalman_filter/: kalman_filter_launch.py  local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kalman_filter/share/kalman_filter/cmake/: kalman_filterConfig.cmake
kalman_filter_results_high_noise/: metadata.yaml
kalman_filter_results_low_noise/: metadata.yaml
log/: latest_build
src/kalman_filter/: CMakeLists.txt  kalman_filter_launch.py  package.xml
src/kalman_filter/launch/: kalman_filter_launch.py
src/kalman_filter/src/: kalman_filter_node.cpp
synthetic_data_bag/: metadata.yaml  synthetic_data_bag_0.db3
